--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Order</h1>
+<h1>Show / Edit Order</h1>
 
 <%= render 'form', order: @order %>
 
-<%= link_to 'Show', @order %> |
 <%= link_to 'Back', orders_path %>
